fixed no comic sans on mobile issue

--- a/public/index.css
+++ b/public/index.css
@@ -55,6 +55,7 @@ body {
         max-height: 40rem;
     }
     h1 {
+        font-family: 'Bubblegum Sans', cursive;
         font-size: 6rem;
         margin-left: 10%;
         margin-right: 10%;
